--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,11 +1,20 @@
 header {
-    padding: 30px 50px;
+    padding: 30px 0px;
     display: flex;
-    justify-items: end;
+    justify-content: end;
+    background-color: lightgray;
+    width: 100%;
+    top: 0;
 }
 
 footer {
-    padding: 30px 50px;
+    padding: 30px 0px;
     display: flex;
-    justify-items: center;
+    justify-content: center;
+    background-color: cornflowerblue;
+}
+
+.menu {
+    background-color: lightsteelblue;
+    width: 400px;
 }
