--- a/src/style/layout.css
+++ b/src/style/layout.css
@@ -34,6 +34,10 @@
     justify-content: space-between;
 }
 
+.justify-around {
+    justify-content: space-around;
+}
+
 .flex-row {
     flex-direction: row;
 }
