--- a/src/style/menu.css
+++ b/src/style/menu.css
@@ -43,6 +43,7 @@
     padding: 10px 20px 0px 0px;
     color: gray;
     font-size: 20px;
+    cursor: pointer;
 }
 
 .open-menu {
@@ -50,6 +51,7 @@
     padding: 10px;
     height: 10px;
     padding-top: 40px;
+    cursor: pointer;
 }
 
 .laptop-menu {
